fixed alignment on *all* parts

--- a/src/styles/QnA-styles.scss
+++ b/src/styles/QnA-styles.scss
@@ -91,7 +91,6 @@
   margin-top: 1em;
   display: flex;
   justify-content: flex-end;
-  margin-bottom: 10px;
 }
 
 .questions-clear-btn {
